--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
     "pinia": "^2.1.7",
     "vee-validate": "^4.12.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
+    "vuefire": "^3.1.19",
     "vuetify": "^3.4.4"
   },
   "devDependencies": {
