--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.7.1",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
+    "sweetalert2": "^11.10.3",
     "uid": "^2.0.2",
     "vee-validate": "^4.12.2",
     "vue": "^3.3.4",
